# 2d_platformer

./: .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md
include/: common.h  player.h  tile.h
resources/: atlas.ase  map.csv  player.ase
src/: animation.c  animation.h  common.h  game.c  game.h  input.c  input.h  main.c  menu.c  menu.h  player.c  player.h  sprite.c  sprite.h  structs.h  tile.c  tile.h
